setup pubsub & firebase emulator
