# docs/swagger.json
@@ -226,10 +226,10 @@
                 }
             }
         },
-        "models.DurationSubscription": {
+        "models.SubscriptionDuration": {
             "type": "object"
         },
-        "models.KindSubscription": {
+        "models.SubscriptionType": {
             "type": "object"
         },
         "models.Subscription": {
@@ -242,10 +242,10 @@
                     "type": "string"
                 },
                 "duration": {
-                    "$ref": "#/definitions/models.DurationSubscription"
+                    "$ref": "#/definitions/models.SubscriptionDuration"
                 },
                 "kind": {
-                    "$ref": "#/definitions/models.KindSubscription"
+                    "$ref": "#/definitions/models.SubscriptionType"
                 },
                 "updatedAt": {
                     "type": "string"
